# Lollapalooza-Scheduler

./: .gitignore  README.md  pyproject.toml
lolla/: app.py  artists.py  constants.py  constraints.py  generate_schedule.py  main.py  params.py  visualize.py  visualize_clickable.py  wrappers.py  youtube.py
lolla/app/: app.py  schedule_table.py  utils.py  youtube.py
lolla/scheduling/: artists.py  constants.py  constraints.py  generate_schedule.py  params.py  wrappers.py
schedules/: schedule.csv
tests/: test_constraints.py
